--- a/index.html
+++ b/index.html
@@ -11,28 +11,30 @@
   </head>
   <body class="bg-info">
     <div class="container">
-      <div class="col-3"></div>
-      <div class="col-6">
-        <div class="card">
-          <div class="card-header">
-            <h4>Ingrese sus datos</h4>
-          </div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" />
-              </div>
-              <div class="form-group">
-                <label for="apellido">Apellido:</label>
-                <input type="text" class="form-control" id="apellido" />
-              </div>
-              <button type="submit" class="btn btn-primary">Guardar</button>
-            </form>
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+          <div class="card">
+            <div class="card-header">
+              <h4>Ingrese sus datos</h4>
+            </div>
+            <div class="card-body">
+              <form>
+                <div class="form-group">
+                  <label for="nombre">Nombre:</label>
+                  <input type="text" class="form-control" id="nombre" />
+                </div>
+                <div class="form-group">
+                  <label for="apellido">Apellido:</label>
+                  <input type="text" class="form-control" id="apellido" />
+                </div>
+                <button type="submit" class="btn btn-primary">Guardar</button>
+              </form>
+            </div>
           </div>
         </div>
+        <div class="col-3"></div>
       </div>
-      <div class="col-3"></div>
     </div>
   </body>
 </html>
